--- a/index.html
+++ b/index.html
@@ -10,17 +10,26 @@
 
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidae, feijas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft">
 
+  <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
   <header class="header-bg">
-    <div class="header">
+    <div class="header container">
       <a href="./">
-        <img src="./img/bikcraft.svg" alt="Bikcraft"></a>
+        <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft"></a>
 
       <nav aria-label="primaria">
-        <ul class="header-menu">
+        <ul class="header-menu font-1-m cor-0">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
           <li><a href="./seguros.html">Seguros</a></li>
           <li><a href="./contato.html">Contato</a></li>
@@ -28,6 +37,171 @@
       </nav>
     </div>
   </header>
+
+  <main class="introducao-bg">
+    <div class="introducao container">
+      <div class="introducao-conteudo">
+        <h1 class="font-1-xxl cor-0">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
+        <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <a class="botao" href="./bicicletas.html">Escolha a sua</a>
+      </div>
+      <picture>
+        <source media="(max-width: 800px)" srcset="./img/bicicletas/nimbus.jpg">
+        <img src="./img/fotos/introducao.jpg" width="1280" height="1600" alt="Bicicleta elétrica preta">
+      </picture>
+    </div>
+  </main>
+
+  <article class="bicicletas-lista">
+    <h2 class="container font-1-xxl">escolha a sua<span class="cor-p1">.</span></h2>
+
+    <ul>
+      <li>
+        <a href="./bicicletas/magic.html">
+          <img src="./img/bicicletas/magic-home.jpg" alt="Bicicleta preta">
+          <h3 class="font-1-xl">Magic Might</h3>
+          <span class="font-2-m cor-8">R$ 2499</span>
+        </a>
+      </li>
+      <li>
+        <a href="./bicicletas/nimbus.html">
+          <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta">
+          <h3 class="font-1-xl">Nimbus Stark</h3>
+          <span class="font-2-m cor-8">R$ 4499</span>
+        </a>
+      </li>
+      <li>
+        <a href="./bicicletas/nebula.html">
+          <img src="./img/bicicletas/nebula-home.jpg" alt="Bicicleta preta">
+          <h3 class="font-1-xl">Nebula COsmic</h3>
+          <span class="font-2-m cor-8">R$ 3499</span>
+        </a>
+      </li>
+    </ul>
+  </article>
+
+  <article class="tecnologia-bg">
+    <div class="tecnologia container">
+      <div class="tecnologia-conteudo">
+        <span class="font-2-l-b cor-5">Tecnologia Avançada</span>
+        <h2 class="font-1-xxl cor-0">você escolhe as suas cores e componentes<span class="cor-p1">.</span></h2>
+        <p class="font-2-l cor-5">Cada Bikcraft é única e possui a sua indentidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
+        <a class="link" href="./bicicletas.html">Escolha um modelo</a>
+        <div class="tecnologia-vantagens">
+          <div>
+            <img src="./img/icones/eletrica.svg" alt="">
+            <h3 class="font-1m cor-0">Motor Elétrico</h3>
+            <p class="font-2-s cor-5">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
+          </div>
+          <div>
+            <img src="./img/icones/rastreador.svg" alt="">
+            <h3 class="font-1-m cor-0">Rastreador</h3>
+            <p class="font-2-s cor-5">Sabemos o quão preciosa é a sua Bikcraft, por isso adcionamos reastreadores e sistemas anti-furto para garantir o seu sossego.</p>
+          </div>
+        </div>
+      </div>
+      <div class="tecnologia-imagem">
+        <img src="./img/fotos/tecnologia.jpg" alt="">
+      </div>
+    </div>
+  </article>
+
+  <section class="parceiros" aria-label="Nossos Parceiros">
+    <h2 class="container font-1-xxl">nossos parceiros<span class="cor-p1">.</span></h2>
+
+    <ul>
+      <li><img src="./img/parceiros/caravan.svg" alt="caravan.svg"></li>
+      <li><img src="./img/parceiros/ranek.svg" alt="ranek.svg"></li>
+      <li><img src="./img/parceiros/handel.svg" alt="handel"></li>
+      <li><img src="./img/parceiros/dogs.svg" alt="dogs"></li>
+      <li><img src="./img/parceiros/lescone.svg" alt="lescone"></li>
+      <li><img src="./img/parceiros/flexblog.svg" alt="flexblog"></li>
+      <li><img src="./img/parceiros/wildbeast.svg" alt="wildbeast"></li>
+      <li><img src="./img/parceiros/surfbot.svg" alt="surfbot"></li>
+    </ul>
+  </section>
+
+  <section class="depoimento" aria-label="Depoimento">
+    <div>
+      <img src="./img/fotos/depoimento.jpg" alt="Pessoa pedalando uma bicicleta Bikcraft">
+    </div>
+    <div class="depoimento-conteudo">
+      <blockquote class="font-1-xl cor-p5">
+        <p>Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. recomendo à todos que amo.</p>
+      </blockquote>
+      <span class="font-1-m-b cor-p4">Ana Júlia</span>
+    </div>
+  </section>
+
+  <article class="seguros-bg">
+    <div class="seguros container">
+      <h2 class="font-1-xxl cor-0">seguros<span class="cor-p1">.</span></h2>
+      <div class="seguros-item">
+        <h3 class="font-1-xl cor-6">PRATA</h3>
+        <span class="font-1-xl cor-0">R$ 199 <span class="font-1-xs cor-6">mensal</span></span>
+        <ul class="font-2-m cor-0">
+          <li>Duas trocas por ano</li>
+          <li>Assistência técnica</li>
+          <li>Suporte 08h às 18h</li>
+          <li>Cobertura estadual</li>
+        </ul>
+        <a class="botao secundario" href="./orcamento.html">Inscreva-se</a>
+      </div>
+
+      <div class="seguros-item">
+        <h3 class="font-1-xl cor-p1">OURO</h3>
+        <span class="font-1-xl cor-0">R$ 299 <span class="font-1-xs cor-6">mensal</span></span>
+        <ul class="font-2-m cor-0">
+          <li>Cinco trocas por ano</li>
+          <li>Assistência especial</li>
+          <li>Suporte 24h</li>
+          <li>Cobertura nacional</li>
+          <li>Desconto em parceiros</li>
+          <li>Acesso ao Clube Bikcraft</li>
+        </ul>
+        <a class="botao" href="./orcamento.html">Inscreva-se</a>
+      </div>
+    </div>
+  </article>
+
+
+  <footer class="footer-bg">
+    <div class="footer container">
+      <img src="./img/bikcraft.svg" alt="">
+      <div class="footer-contato">
+        <h3 class="font-2-l-b cor-0">Contato</h3>
+        <ul class="font-2-m cor-5">
+          <li><a href="tel:+557199999999">+55 71 9999-9999</a></li>
+          <li><a href="mailto:contato@bikcraft.">contato@bikcraft.com</a></li>
+          <li>Rua Ali perto, 42 - Piatã</li>
+          <li>Salvador - BA</li>
+        </ul>
+        <div class="footer-redes">
+          <a href="">
+            <img src="./img/redes/instagram.svg" alt="Instagram">
+          </a>
+          <a href="">
+            <img src="./img/redes/facebook.svg" alt="Facebook">
+          </a>
+          <a href="">
+            <img src="./img/redes/youtube.svg" alt="Youtube">
+          </a>
+        </div>
+      </div>
+      <div class="footer-informacoes">
+        <h3 class="font-2-l-b cor-0">informacoes</h3>
+        <nav>
+          <ul class="font-1-m cor-5">
+            <li><a href="./bicicletas.html">Bicicletas</a></li>
+            <li><a href="./seguros.html">Seguros</a></li>
+            <li><a href="./contato.html">Contato</a></li>
+            <li><a href="./termos.html">Termos e Condições</a></li>
+          </ul>
+        </nav>
+      </div>
+      <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
+    </div>
+  </footer>
 </body>
 
 </html>
