--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -10,7 +10,8 @@
 
   <meta name="description" content="Nimbus.">
 
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="icon" href="../favicon.svg" type="image/svg+xml">
+  <link rel="stylesheet" href="../css/style.min.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,6 +20,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&display=swap" rel="stylesheet">
 
+  <script>document.documentElement.classList.add('js')</script>
 </head>
 
 <body id="bicicleta">
@@ -46,14 +48,14 @@
     </div>
     <div class="bicicleta container">
       <div class="bicicleta-imagens">
-        <img src="../img/bicicleta/nimbus1.jpg" alt="">
-        <img src="../img/bicicleta/nimbus2.jpg" alt="">
-        <img src="../img/bicicleta/nimbus3.jpg" alt="">
+        <img src="../img/bicicleta/nimbus1.jpg" alt="Bicicleta 1">
+        <img src="../img/bicicleta/nimbus2.jpg" alt="Bicicleta 2">
+        <img src="../img/bicicleta/nimbus3.jpg" alt="Bicicleta 3">
       </div>
       <div class="bicicleta-conteudo">
         <p class="font-2-l cor-5">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <div class="bicicleta-comprar">
-          <a class="botao" href="../orcamento.html">Comprar Agora</a>
+          <a class="botao" href="../orcamento.html?tipo=bikcraft&produto=nimbus">Comprar Agora</a>
           <span class="font-1-xs cor-6"><img src="../img/icones/entrega.svg" alt=""> entrega em 5 dias</span>
           <span class="font-1-xs cor-6"><img src="../img/icones/estoque.svg" alt=""> 18 em estoque</span>
         </div>
@@ -166,6 +168,7 @@
       <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
     </div>
   </footer>
+  <script src="../js/script.js"></script>
 </body>
 
 </html>
